Point software to core model.

--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/cvelcm_retrieve.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/cvelcm_retrieve.html
@@ -51,7 +51,7 @@
                 <td>Affected Softwares</td>
                 <td>
                     {% for affected_software in object.affected_softwares.all %}
-                    <a href="{% url 'plugins:nautobot_device_lifecycle_mgmt:softwarelcm' pk=affected_software.pk %}">{{ affected_software }}</a>{% if not forloop.last %}, {% endif %}
+                    <a href="{% url 'dcim:softwareversion' pk=affected_software.pk %}">{{ affected_software }}</a>{% if not forloop.last %}, {% endif %}
                     {% endfor %}
                 </td>
             </tr>
