Added number to contract template

--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/contractlcm_retrieve.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/contractlcm_retrieve.html
@@ -25,6 +25,10 @@
                 </td>
             </tr>
             <tr>
+                <td>Number</td>
+                <td>{% if object.number %} {{ object.number }} {% else %} &mdash; {% endif %}</td>
+            </tr>
+            <tr>
                 <td>Start Date</td>
                 <td>{% if object.start %} {{ object.start }} {% else %} &mdash; {% endif %}</td>
             </tr>
