add legend, update accrodion font size

--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/inc/device_notice.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/inc/device_notice.html
@@ -42,6 +42,7 @@
                         <div class="panel-heading" role="tab" id="heading{{ forloop.counter }}">
                             <span role="button"
                                   class="accordion-toggle collapsed"
+                                  style="font-size:14px"
                                   data-toggle="collapse"
                                   data-parent="#hwAccordion"
                                   href="#collapse{{ forloop.counter }}"
