--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/validatedsoftware_device_report.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/validatedsoftware_device_report.html
@@ -36,7 +36,7 @@
                     </div>
                 {% endblock %}
             {% else %}
-                    <span class="text-center alert-danger p-4 m-4">-- Oops, no config validation found, visual not made! --</span>
+                    <span class="text-center alert-danger p-4 m-4">-- Can't generate visualization, no config validation found. --</span>
             {% endif %}
             <!-- END VISUAL BLOCK -->
             <h3 class="text-center m-2 p-3">Executive Summary</h3>
